<resources>
    <string name="app_name">SMRC</string>
    <string name="nav_home">Home</string>
    <string name="nav_share">Share</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_profile">Profile</string>
    <string name="records">Records</string>
    <string name="access_grant">Access Grant</string>
    <string name="share_record">Share Record</string>
    <string name="notifications">Notifications</string>
    <string name="name">Name :</string>
    <string name="id_number">ID Number :</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender :</string>
    <string name="phone_number">Phone Number :</string>
    <string name="login">Login</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="read_it_together">Smart Health Record</string>
    <string name="skip">Skip</string>
    <string name="forget_password">Forget Password</string>
    <string name="booki">Cloud</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="smart_health_records">Smart Health Records</string>
    <string name="mobile_number_hint">Mobile Number</string>
    <string name="username_hint">Username</string>
    <string name="id_number_hint">ID Number</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="email">Email:</string>
    <string name="remove">Remove</string>
    <string name="block">Block</string>
    <string name="medical_records_access_grant">Medical Records Access Grant</string>
    <string name="grant">Grant</string>
    <string name="add">Add</string>
    <string name="email_or_id_number_hint">Email or ID number</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="choose_access_level">Choose the level of access that you grant this client, as stated in the Smart Medical records access policy</string>
    <string name="if_others">If others</string>
    <string name="others">Others</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="delete">Delete</string>
    <string name="from">From:</string>
    <string name="share_message1">Opening medical records Share allows you medical records to being accessible by any health practitioner registered with smart medical record cloud services. To filter out the practitioner who should access your medical, please providing the practitioner Id or email.</string>
    <string name="id_or_email">Id Or Email</string>
    <string name="share_via_access_grant_policy">Share or Close Sharing of other\'s medical records as stated under Access Grant Policy</string>
    <string name="save">Save</string>
    <string name="off">OFF</string>
    <string name="smart_medical_records_cloud">Smart Medical Records Cloud</string>
    <string name="medical_record_policy">The policy states the conditions under which your medical records are open for sharing and can be accessed by medical practitioner(s).\n
Your Records are accessible to different medical practitioners under the following conditions:\n
•	In case the Emergency Mode is enabled, then medical practitioner(s) can access the records provided.\n
•	In case the medical Practitioner is the one who created a record(s) initially.\n
•	 Medical practitioner can also access your medical records if you have agreed him or her to be your personal medical practitioner.\n
•	Any Medical practitioner can access your medical records if you turn on medical record sharing, but you can also filter out such that your medical records to be accessed by a specific medical practitioner by providing his or her ID or Email on sharing section.\n
•	The Access Grant Client(s) can also open your medical record sharing in times of critical condition when you have no capability or strength to share the Medical record and therefor they do it on your behalf.\n
</string>
</resources>
