<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F6F6"
    android:id="@+id/access_grant_obj_holder">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:cardCornerRadius="2dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/client_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/default_user_profile"
                app:civ_border_color="#c0c0c0"
                app:civ_border_width="2dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_toRightOf="@+id/client_image"
                android:layout_toEndOf="@+id/client_image"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:text="@string/name"/>
                    <TextView
                        android:id="@+id/client_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:layout_marginLeft="5dp"
                        android:text="name"
                        android:layout_marginStart="5dp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="2dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:text="@string/id_number"/>
                    <TextView
                        android:id="@+id/client_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:layout_marginLeft="5dp"
                        android:text="name"
                        android:layout_marginStart="5dp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="2dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:text="@string/phone_number"/>
                    <TextView
                        android:id="@+id/client_phone_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:layout_marginLeft="5dp"
                        android:text="Contact"
                        android:layout_marginStart="5dp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="2dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:text="@string/email"/>
                    <TextView
                        android:id="@+id/client_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:layout_marginLeft="5dp"
                        android:text="Email"
                        android:layout_marginStart="5dp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="end"
                    >

                    <Button
                        android:id="@+id/client_remove_btn"
                        style="@style/actionButtonOne"
                        android:layout_width="67dp"
                        android:layout_height="21dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="3dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/remove"
                        android:textColor="#000000" />

                    <Button
                        android:id="@+id/client_block_btn"
                        style="@style/actionButtonOne"
                        android:layout_width="67dp"
                        android:layout_height="23dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="3dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/block"
                        android:textColor="#000000"
                        android:layout_marginEnd="10dp" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>