<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        style="@style/parent"
        android:layout_weight="3"
        android:background="@drawable/login_shape_bk"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ImageView
            style="@style/parent"
            android:layout_height="156dp"
            android:background="@drawable/ic_login_bk"
            android:contentDescription="login background" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <TextView
            android:id="@+id/heading"
            style="@style/headerText"
            android:layout_width="252dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/medical_records_access_grant"
            android:textAlignment="center" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            >

            <include
                layout="@layout/layout_grant_access"
                android:layout_width="match_parent"
                android:layout_height="100dp" />
        </ScrollView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:background="#ffffff"
            android:gravity="center">

            <Button
                android:id="@+id/grantCancelButton"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="59dp"
                android:layout_marginRight="59dp"
                android:background="#ffffff"
                android:text="@string/cancel"
                android:textColor="#000000" />

            <Button
                android:id="@+id/grantAddButton"
                android:layout_width="110dp"
                android:layout_height="24dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="118dp"
                android:layout_marginLeft="118dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="183dp"
                android:layout_marginRight="183dp"
                android:background="#ffffff"
                android:text="@string/add"
                android:textColor="#000000" />
        </RelativeLayout>

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
